# mdconv

./: .dockerignore  .gitignore  API_README.md  DOCKER_README.md  Dockerfile  QUICKSTART_API.md  README.md  api_server.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_docker.bat  test_docker.sh  test_docker_conversions.py  test_file_upload.py  test_sample.md
Example/: COMPONENT_TEST_RESULTS.md  Prod_ollama.md  presentation.md  presentation.pptx  presentation_api.pptx  presentation_custom.pptx  presentation_fixed.pptx  presentation_fixed2.pptx  presentation_modern.pptx  presentation_test.pptx  presentation_toc.pptx  test_components.md
examples/react/: MarkdownConverter.tsx  README.md  SimpleConverter.js
mdconv/: __init__.py
mdconv/cli/: __init__.py  commands.py  main.py
mdconv/converters/: __init__.py  base.py  docx.py  epub.py  html.py  latex.py  pdf.py  pdf_pure.py  pptx.py
mdconv/core/: __init__.py  converter.py  pandoc_wrapper.py
mdconv/utils/: __init__.py  exceptions.py  pptx_themes.py  validation.py
